crates/eure-macros/tests/compile_fail/opaque_missing_from_impl_union_from.rs
use eure::FromEure;

mod external {
    pub struct Target;
}

#[derive(FromEure)]
#[eure(opaque = "external::Target")]
enum Proxy {
    A,
}

fn main() {}
